// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`archive list selection should record both machine-readable selectors 1`] = `
{
  "build": {
    "builtAt": "<build>",
    "commit": "<build>",
    "isDirty": "<build>",
    "kind": "<build>",
    "optimization": "<build>",
    "profile": "<build>",
    "reference": "<build>",
    "runId": "<build>",
    "rustc": "<build>",
    "target": "<build>",
    "version": "<build>",
  },
  "command": [
    "archive",
    "list",
  ],
  "duration": "<duration>",
  "error": null,
  "execution": {
    "origin": "auto",
    "workers": "<workers>",
  },
  "exitCode": 0,
  "outcome": "success",
  "result": {
    "entries": [
      {
        "isDirectory": false,
        "name": "nested\\alpha.ltx",
        "sharedWith": [],
        "sizeCompressed": 6,
        "sizeReal": 6,
        "source": "<sandbox>/packed/fixture.db",
      },
      {
        "isDirectory": false,
        "name": "zeta.ltx",
        "sharedWith": [],
        "sizeCompressed": 5,
        "sizeReal": 5,
        "source": "<sandbox>/packed/fixture.db",
      },
    ],
    "total": 2,
  },
}
`;

exports[`archive list selection should record both machine-readable selectors 2`] = `
{
  "build": {
    "builtAt": "<build>",
    "commit": "<build>",
    "isDirty": "<build>",
    "kind": "<build>",
    "optimization": "<build>",
    "profile": "<build>",
    "reference": "<build>",
    "runId": "<build>",
    "rustc": "<build>",
    "target": "<build>",
    "version": "<build>",
  },
  "command": [
    "archive",
    "list",
  ],
  "duration": "<duration>",
  "error": null,
  "execution": {
    "origin": "auto",
    "workers": "<workers>",
  },
  "exitCode": 0,
  "outcome": "success",
  "result": {
    "entries": [
      {
        "isDirectory": true,
        "name": "nested\\",
        "sharedWith": [],
        "sizeCompressed": 0,
        "sizeReal": 0,
        "source": "<sandbox>/packed/fixture.db",
      },
    ],
    "total": 1,
  },
}
`;

exports[`archive list selection should write the expected files 1`] = `
[
  {
    "path": "directories.json",
    "sha256": "e9fb20a5ac054168431b2f3b27119e66f8119fb92648bd5386064a7626efc015",
    "size": 763,
  },
  {
    "path": "files.json",
    "sha256": "12a1cef15d19a49271a977c60fa63b55a0fb1a6fab255d31b9c9df31147b1f95",
    "size": 974,
  },
  {
    "path": "packed/fixture.db",
    "sha256": "06e2eeba4222d887ced801c034320cec7e9a6356278bb0f5928a0970f9b9e1c8",
    "size": 162,
  },
  {
    "path": "source/nested/alpha.ltx",
    "sha256": "b6a98d9ce9a2d9149288fa3df42d377c3e42737afdcdaf714e33c0a100b51060",
    "size": 6,
  },
  {
    "path": "source/zeta.ltx",
    "sha256": "2088d0c4b41022d90f663fa8d8156cb525241b55d30ecdf922c38f94f7efda4c",
    "size": 5,
  },
]
`;
